<resources>
    <string name="app_name">UrbanDictionaryN</string>
    <string name="definition">Definition</string>
    <string name="author">Author: </string>
    <string name="written_on">Written On: </string>
    <string name="searchHint">Enter a word to Search For</string>
    <string name="search">Search</string>
    <string name="example">Example</string>
    <string name="permalink">Permalink</string>
    <string name="sort_by_thumbs_up">Sort by thumbs up</string>
    <string name="sort_by_thumbs_down">Sort by thumbs down</string>
    <string name="clear">Clear Filter</string>
    <string name="error_getting_word_definition">Error getting word definition</string>
</resources>